--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,9 +2,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0px;
     background-image: url('./../../images/background1.jpeg');
-    /* background-color: #767676; */
-    /* background-color: rgb(182 193 203); */
-    color: #1a262a;
+    color: whitesmoke;
 }
 
 .alert {
@@ -200,5 +198,7 @@ input {
       margin: 20px auto;
       padding: 25px;
       border-radius: 2px;
-      margin-bottom: ;
+      color: whitesmoke;
     }
+
+
