modifed spacing and size of buttons on login, register, and color pages

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,8 +9,8 @@ body {
     background-color: #ff4545;
     margin: 50px;
 }
-/* 
-form {
+
+/* form {
     background-color: #767676;
     width: 30%;
     height: 250px;
