--- a/src/components/LoginPage/LoginPage.css
+++ b/src/components/LoginPage/LoginPage.css
@@ -4,7 +4,7 @@
     width: 30%;
     height: 250px;
     margin: 20px auto;
-    padding: 25px;
+    /* padding: 25px; */
     border-radius: 2px;
 }
 
@@ -17,5 +17,5 @@
 
 .register-btn {
     margin-top: 130px;
-    margin-right: 55px;
+    /* margin-right: 15px; */
 }
