--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,13 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0px;
-    background-image: url('./../../images/background1.jpeg');
+    /* background-image: url('./../../images/background1.jpeg'); */
+    /* background-image: url('./../../images/paint-background.jpg'); */
+    /* background-image: url('./../../images/background2.jpeg'); */
+    /* background-image: url('./../../images/theMatrix.jpg'); */
+    /* background-image: url('./../../images/brickWall.jpg'); */
+    /* background-image: url('./../../images/lukeMa.png'); */
+    background-color: #000;
     color: whitesmoke;
 }
 
