--- a/src/components/pages/ColorsPage/AddByColorModal.css
+++ b/src/components/pages/ColorsPage/AddByColorModal.css
@@ -5,7 +5,8 @@
 
 .addByColorModal {
   position: absolute;
-  height: 55%;
+  text-align: center;
+  height: 25%;
   width: 40%;
   top: 50%;
   left: 50%;
@@ -13,4 +14,8 @@
   padding: 5px;
   margin-right: -50%;
   transform: translate(-50%, -50%);
+}
+
+.modalHdr{
+  color: black;
 }
