--- a/src/components/pages/ColorsPage/ColorsPage.css
+++ b/src/components/pages/ColorsPage/ColorsPage.css
@@ -4,5 +4,55 @@
 
 .modalBtn {
     text-align: center;
+    /* display: inline-block; */
+    float: left;
+    width: 100%;
+    height: 20rem;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    float: left;
+    -ms-transition: 0.4s ease-in-out;
+    -webkit-transition: 0.4s ease-in-out;
+    transition: 1.8s ease-in-out;
+
+}
+.addByColorModal {
+    position: absolute;
+    text-align: center;
+    height: 25%;
+    width: 40%;
+    top: 50%;
+    left: 50%;
+    background-color: #fefefe;
+    padding: 5px;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .modalHdr{
+    color: black;
+  }
+
+  .swatchesBody{
+    text-align: auto;
     display: inline-block;
+    width: 20%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    
+} 
+.box{ 
+    width: 100%;
+    height: 20rem;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    float: left;
+    -ms-transition: 0.4s ease-in-out;
+    -webkit-transition: 0.4s ease-in-out;
+    transition: 1.8s ease-in-out;
+
 }
